--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 html {
     font-size: 62.5%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
 }
 
 * {
@@ -16,10 +17,6 @@ body {
     height: 100vh;
     width: 100vw;
     background-color: var(--black);
-}
-
-.heading {
-    color: white;
 }
 
 .container {
@@ -45,16 +42,14 @@ body {
 
 .buttons a {
     text-decoration: none;
-    height: 30px;
-    width: 200px;
-    font-size: 25px;
+    font-size: 20px;
     background-color: white;
     color: var(--black);
     text-align: center;
     margin: 5px;
-    padding: 5px;
+    padding: 2px 4px;
     border: 2px solid white;
-    border-radius: 10px;
+    border-radius: 5px;
     transition: all 0.25s ease-in-out;
     font-weight: 500;
     vertical-align: middle;
